# neoai-code

./: .gitmodules  LICENSE  Makefile  README.md  languages.yml
.github/: dependabot.yml
eval/eval-cluster/: .gitignore  README.md
intellij/: README.md  build.gradle  gradlew.bat  settings.gradle
intellij/Common/: IMPLEMENTATION_SUMMARY.md  build.gradle
intellij/Neoai/: build.gradle
intellij/NeoaiSelfHosted/: build.gradle
intellij/ci/: publish-gh-release.sh  publish-release-version.sh
intellij/local-repo/: run-local-repo.sh
jupyter/: DEBUG.md  Dockerfile  LICENSE  README.ch.md  README.md  README.rst  build-image.sh  setup.py  start-server.sh  stop-server.sh
jupyter/go/: go.mod
nvim/: .editorconfig  .gitignore  .luarc.json  .styluaignore  CODE_REVIEW_SUMMARY.md  LOGGING_CHANGES.md  README.md  WINDOWS_COMPATIBILITY.md  stylua.toml  test_logging.lua
nvim/chat/: Cargo.toml  build.rs  index.html  manifest.json
nvim/chat/assets/: README.md
nvim/chat/scripts/: build.sh
nvim/chat/src/: icon.rs  main.rs
nvim/doc/: neoai.txt
nvim/examples/: README.md  advanced_config.lua  basic_setup.lua  chat_automation.lua  completion_examples.lua  custom_keymaps.lua  lsp_integration.lua  (+6 more)
react-editor/: .gitignore  buf.gen.yaml  generate.js  package.json  pnpm-lock.yaml  rollup.config.js  tsconfig.json
sublime/: .gitignore  .pre-commit-config.yaml  Context.sublime-menu  Default.sublime-commands  Default.sublime-keymap  Main.sublime-menu  NeoAi.py  NeoAi.sublime-settings  dl_binaries.sh  package.json
vscode/: .vscodeignore  package.json  verify-package-metadata.js
(+277 files in other folders)
