[package]
name = "neoai_chat"
version = "0.1.0"
edition = "2021"
description = "NeoAI Chat Desktop Application"
authors = ["NeoAI Team"]
license = "MIT"
repository = "https://github.com/neoai/neoai-code"

[dependencies]
image = "0.25"
once_cell = "1.19"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wry = "0.40"

[build-dependencies]
serde_json = "1.0"
chrono = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true